Style fixes: max table width & name left align

--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -37,3 +37,11 @@
 .members-table-photo img {
   object-fit: cover;
 }
+
+.form-block {
+  max-width: 750px;
+}
+
+.members-table-cell-link>a {
+  justify-content: left;
+}
